tests/errors/NoSource.java
import org.aspectj.testing.Tester;

class NoSource {
    introduction String {
        public void foo() {}
    }
}
